--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
+        android:id="@+id/listViewMovie"
         android:layout_width="395dp"
         android:layout_height="396dp"
         android:layout_marginStart="8dp"
